[package]
name = "ergo-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
ergo-lib = "0.27.1"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
chain-syncer = { path = "../chain-syncer", version = "0.1.0" }
redbit = { git = "https://github.com/pragmaxim-com/redbit" }
min-batch = { git = "https://github.com/pragmaxim-com/min-batch.rs" }
config = "0.15.11"
async-trait = "0.1.81"
futures = "0.3.30"
serde = { version = "1.0.219", features = ["derive"] }
axum = {  version = "0.8.4", features = ["default", "macros"] }
thiserror = "2.0.12"
dotenv = "0.15.0"
chrono = "0.4.38"
anyhow = "1.0.80"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "blocking",
] }
url = "2.5.2"
